--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ h2 {
     margin: 10px 0;
     border-radius: 5px;
     cursor: move;
+    display: inline-block;
+    width: calc(100% - 20px);
 }
 
 .item:hover {
