--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1 {
     margin-top: 20px;
 }
 
-.milestones, .years {
+.years, .milestones {
     background-color: #fff;
     border-radius: 10px;
     padding: 20px;
@@ -31,18 +31,19 @@ h2 {
 }
 
 .item {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #fff;
+    color: #333;
     padding: 10px;
     margin: 10px 0;
     border-radius: 5px;
     cursor: move;
+    border: 1px solid #000;
     display: inline-block;
     width: calc(100% - 20px);
 }
 
 .item:hover {
-    background-color: #45a049;
+    background-color: #f0f0f0;
 }
 
 .item.used {
